# adb-auto

./: .gitignore  README.md  adb.py  derivation.nix  development.nix  gunicorn.conf.py  main.py  pyproject.toml  shell.nix
events/: down
src/adb_auto/: __init__.py  __main__.py  cli  main.py  screen.py
src/adb_auto/adb/: __init__.py  device.py
src/adb_auto/api/v1/: screen.py  screen.yml  set-interval.yml  swipe.yml  tap.yml
src/adb_auto/config/: setting.py
src/adb_auto/docs/: hello.yml
src/adb_auto/docs/v1/: screen.yml
src/adb_auto/docs/v1/screen/: get-text-area.yml  get-text.yml  toggle-reload.yml
src/adb_auto/jobs/: screen_helper.py  screen_reload_job.py
src/adb_auto/templates/: index.html
src/adb_auto/utils/: embedded_image.py  logger.py  redis_helper.py
src/adb_auto/views/: home.py
src/waa_auto/: __init__.py  __main__.py  get_time.py  main.py
src/waa_auto/core/: game_event.py  game_time.py
src/waa_auto/script/: map_move.py
tests/: test_get_time.py  test_redis.py  test_screen.py
tests/warior-and-aventure/: get-time.py
