[project]
name = "nghiango-adb-auto"
version = "0.0.1"
dependencies = [
    "pure-python-adb",
    "flasgger",
    "flask",
    "pytesseract",
    "opencv-python",
    "numpy",
    "gunicorn",
    "python-dotenv"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adb_auto = ["templates/**/*.html", "static/**/*"]

[project.scripts]
adb_auto = "adb_auto:main"
